WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86170
REGRESSION(
r116687
): [Chromium] plugins/embed-attributes-style.html shows a garbled string
https://bugs.webkit.org/show_bug.cgi?id=86170
Summary
REGRESSION(r116687): [Chromium] plugins/embed-attributes-style.html shows a g...
Kent Tamura
Reported
2012-05-10 20:50:35 PDT
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&showLargeExpectations=true&tests=plugins%2Fembed-attributes-style.html
Rectangles for plugins should contain "Can't load plugin" text, but one or some rectangles show garbled text.
Attachments
Patch
(4.60 KB, patch)
2012-05-11 12:33 PDT
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-05-10 22:49:06 PDT
Chromium-mac also has the issue.
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&showLargeExpectations=true&tests=compositing%2Fplugins%2Fcomposited-plugin.html
Anders Carlsson
Comment 2
2012-05-11 09:44:12 PDT
I'm looking at this now.
Anders Carlsson
Comment 3
2012-05-11 12:33:07 PDT
Created
attachment 141469
[details]
Patch
Anders Carlsson
Comment 4
2012-05-11 12:39:38 PDT
Committed
r116794
: <
http://trac.webkit.org/changeset/116794
>
Kent Tamura
Comment 5
2012-05-12 02:04:00 PDT
Thank you for fixing this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug