REGRESSION(r116687): [Chromium] plugins/embed-attributes-style.html shows a garbled string https://bugs.webkit.org/show_bug.cgi?id=86170

Reviewed by Andreas Kling.

The string we are passing to the TextRun constructor needs to stay alive for longer so revert back to the old
behavior where we store it as a member variable.

* rendering/RenderEmbeddedObject.cpp:
(WebCore::unavailablePluginReplacementText):
(WebCore):
(WebCore::RenderEmbeddedObject::setPluginUnavailabilityReason):
(WebCore::RenderEmbeddedObject::getReplacementTextGeometry):
* rendering/RenderEmbeddedObject.h:
(RenderEmbeddedObject):

Canonical link: https://commits.webkit.org/103828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116794 268f45cc-cd09-0410-ab3c-d52691b4dbfc